Remove unnecessary plugins and configurations from project pom.xml